@@ -14,7 +14,7 @@
     </configurations>
 
     <dependencies>
-        <dependency force="true" org="com.vaadin" name="vaadin" rev="6.5.0" conf="build->default"/>
+        <dependency force="true" org="com.vaadin" name="vaadin" rev="6.6.5" conf="build->default"/>
         <dependency force="true" org="javax.servlet" name="servletapi" rev="2.5" conf="build->default"/>
         <dependency force="true" org="javax.validation" name="validation-api" rev="1.0.0.GA" conf="build->default"/>
         <dependency force="true" org="net.sourceforge.jibx" name="jibx" rev="1.2.3" conf="build->runtime-base"/>
