@@ -1,4 +1,9 @@
 
+Version Next
+
+    - Added ContextApplicationServlet
+    - Update for latest Vaadin version
+
 Version 1.0.119 Released Aug 28, 2011
 
     - Changed TimedWait to use nanoTime() instead of currentTimeMillis()
